<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Goals Reminder</string>
    <string name="title_activity_resolutions_fragment">Goals</string>
    <string name="title_activity_reminders_fragment">Reminders</string>
    <string name="title_activity_edit_goal">Edit Goal</string>
    <string name="no_goals">No goals set.</string>
    <string name="set_reminders">Display Reminders</string>
    <string name="menu_insert">New Goal</string>
    <string name="menu_delete">Delete</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit_image_content_description">Edit</string>
    <string name="title_activity_goals_fragment">GoalsFragment</string>
    <string name="reminder_image_content_description">Reminder</string>

</resources>