<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffadadad"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewTitle_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5.0dip"
            android:paddingTop="5.0dip"
            android:text="@string/title"
            android:textSize="18.0sp" />

        <EditText
            android:id="@+id/editTextTitle_Content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="5.0dip"
            android:background="#ffffffff"
            android:ems="10"
            android:inputType="text"
            android:padding="5.0dip" />

        <TextView
            android:id="@+id/textViewDescription_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40.0dip"
            android:paddingLeft="5.0dip"
            android:text="@string/description"
            android:textSize="18.0sp" />

        <EditText
            android:id="@+id/editTextDescription_Content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="5.0dip"
            android:background="#ffffffff"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:lines="10"
            android:padding="5.0dip" />

        <LinearLayout
            android:id="@+id/footer_button_bar"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:background="#ff696969"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/saveButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:drawableLeft="@drawable/ic_action_accept"
                android:text="@string/save" />

            <View
                android:id="@+id/buttonDivider"
                android:layout_width="1.0dip"
                android:layout_height="42.0dip"
                android:layout_marginBottom="4.0dip"
                android:layout_marginTop="4.0dip"
                android:background="#ffbbbbbb" />

            <Button
                android:id="@+id/cancelButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:drawableLeft="@drawable/ic_action_cancel"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
